# advent-of-code

./: .gitignore  README.md  _template.py  pyproject.toml  util.py
.zed/: debug.json  settings.json
2015/: .env.example  README.md  _template.py  day-1.py  day-10.py  day-13.py  day-14.py  day-15.py  day-17.py  day-18.py  day-19.py  day-2.py  day-20.py  day-21.py  day-3.py  day-4.py  day-6.py  day-7.py  day-8.py  day-9.py  one.py  pyproject.toml  three.py  two.py  util.py
2015/solutions/: day-11.py  day-12.py  day-13.py  day-14.py  day-16.py  day-18.py  day-2.py  day-20.py  day-21.py  day-5.py
2022/: README.md  day-1.py  day-11.py  day-12.py  day-2.py  day-3.py  pyproject.toml
2022/solutions/: day-1.py  day-10.py  day-13.py  day-14.py  day-4.py  day-5.py  day-6.py  day-7.py  day-8.py  day-9.py
2024/: Cargo.toml  README.md  day-1.py  day-2.py
2024/src/: main.rs
2024/src/solutions/: _template.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  mod.rs
2025/: README.md  go.mod  main.go
2025/solutions/: _template.go  day-1.go  day-2.go  day-3.go  go.mod  solutions.go
2025/solutions/.template/: template.go
2025/solutions/day1/: day1.go
2025/solutions/day10/: day10.go
2025/solutions/day2/: day2.go
2025/solutions/day3/: day-3.go
2025/solutions/day4/: day-4.go  day4.go
2025/solutions/day5/: day5.go  interval-tree.go
2025/solutions/day6/: day6.go
2025/solutions/day7/: day7.go  tachyon-manifold.go
2025/solutions/day8/: circuits.go  day8.go
(+1 files in other folders)
