[project]
name = "advent-of-code-2022"
version = "1.0.0"
description = "Advent of Code Solutions for 2022"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncio>=4.0.0",
    "heapdict>=1.0.1",
    "python-dotenv>=1.2.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
