[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
itertools = "0.14.0"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["full"] }
